[package]
name = "cube"
version = "0.1.0"
edition = "2021"

[features]
dev = []
tracing = []

[dependencies]
bevy = "0.10"
bevy_egui = "0.20" # A plugin for Egui integration into Bevy

rand = "0.8"

bitflags = "2.3"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.28", default-features = false } # Cross-platform window creation library.
image = { version = "0.24", default-features = false } # Imaging library written in Rust. Provides basic filters and decoders for the most common image formats.